[project]
name = "nebius-solution-library"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail Veltishchev",email = "mv@nebius.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
