[project]
name = "nebius-solution-library"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail Veltishchev",email = "mv@nebius.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.11"
dependencies = [
    "boto3 (>=1.37.29)",
    "matplotlib (>=3.10.1)",
    "numpy (>=2.2.4)",
    "pandas (>=2.2.3)",
    "tqdm (>=4.67.1)",
    "torch (>=2.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
